// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MarginG should initialize at all 1`] = `
<g
  transform="translate(0,0)"
>
  <circle />
</g>
`;

exports[`MarginG should work with props 1`] = `
<g
  transform="translate(10,10)"
>
  <circle />
</g>
`;
